--- a/app/src/main/res/layout/activity_main_french.xml
+++ b/app/src/main/res/layout/activity_main_french.xml
@@ -5,12 +5,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/mainLayout">
+    android:id="@+id/mainLayout_french">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/enter_info"
+        android:text="@string/entrer_infos"
         android:id="@+id/enter_info"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="@string/lastName"
+        android:hint="@string/nom"
         android:ems="10"
         android:id="@+id/lastName"
         android:layout_marginTop="59dp"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/firstName"
-        android:hint="@string/firstName"
+        android:hint="@string/prenom"
         android:layout_below="@+id/lastName"
         android:layout_alignLeft="@+id/lastName"
         android:layout_alignStart="@+id/lastName" />
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/skills"
-        android:hint="@string/skills"
+        android:hint="@string/competences"
         android:layout_below="@+id/age"
         android:layout_alignLeft="@+id/age"
         android:layout_alignStart="@+id/age" />
@@ -58,7 +58,7 @@
         android:inputType="phone"
         android:ems="10"
         android:id="@+id/phone"
-        android:hint="@string/phone"
+        android:hint="@string/telephone"
         android:layout_below="@+id/skills"
         android:layout_alignLeft="@+id/lastName"
         android:layout_alignStart="@+id/lastName" />
@@ -66,7 +66,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Valider"
+        android:text="@string/valider"
         android:id="@+id/validate"
         android:onClick="send"
         android:layout_alignParentBottom="true"
